# tradingapi

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  setup.cfg  setup.py
notebooks/: alpaca_demo.ipynb  ib_demo.ipynb
src/: __init__.py
src/alpaca/: __init__.py  alpaca_api.py
src/base/: __init__.py  base_api.py  exceptions.py
src/domainmodels/: __init__.py  account.py  clock.py  closed_position.py  order.py  position.py  trading_day.py
src/helpers/: async_wrapper.py
src/ib/: __init__.py  ib_api.py
src/ig/: __init__.py
src/mappers/: __init__.py  account_mapper.py  clock_mapper.py  closed_positions_mapper.py  mapper.py  order_mapper.py  position_mapper.py  tradingday_mapper.py
src/tradingapi/: __init__.py
src/tradingapi/alpaca/: alpaca_api.py  example.json
src/tradingapi/base/: __init__.py  base_api.py  exceptions.py
src/tradingapi/ib/: __init__.py  ib_api.py
src/tradingapi/lemonmarkets/: Lemons_Markets_Ticker_Check.ipynb
tests/: main.py  test.py
tests/data/: expected_get_clock.json
tests/data/close_all_positions/: api_close_all_positions.json  expected_close_all_positions.json
tests/data/close_position/: api_closed_position.json
tests/data/get_account/: api_get_account.json  expected_get_account.json  expected_get_account.pkl
tests/data/get_order/: expected_get_order.json
tests/data/get_position/: api_get_position.json  expected_get_position.json
tests/data/get_trading_days/: api_get_trading_days.json  expected_get_trading_days.json
tests/data/list_orders/: api_list_orders.json  expected_list_orders.json
tests/data/list_positions/: api_list_positions.json  expected_list_positions.json
tests/data/submit_order/: api_submit_order.json  expected_submit_order.json
tests/testhelpers/: data_helper.py
