[tool.poetry]
name = "Tradingapi"
version = "0.1.0"
description = ""
authors = ["August Andersen", "Julius Kittler"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.1.5"
numpy = "1.19.4"
scipy = "1.5.4"
pymongo = "3.11.2"
requests = "2.25.1"
pytz = "2020.5"
hjson = "3.0.2"
alpaca-trade-api = "v0.51.0"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^20.8b1"
flake8 = "^3.8.4"
pep8-naming = "^0.11.1"
mypy = "^0.790"
pydocstyle = "^5.1.1"
darglint = "^1.5.8"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
