[tool.poetry]
name = "tradingapi"
version = "0.8.2"
description = ""
authors = ["August Andersen", "Julius Kittler"]

[tool.poetry.dependencies]
python = "3.8.x"
pandas = "^1.0.0"
numpy = "^1.0.0"
scipy = "^1.0.0"
pymongo = "^3.0.0"
requests = "^2.0.0"
pytz = "^2021.1"
alpaca-trade-api = "v0.51.0"
ib_insync = "0.9.64"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^20.8b1"
flake8 = "^3.9.2"
pep8-naming = "^0.11.1"
mypy = "^0.790"
pydocstyle = "^5.1.1"
darglint = "^1.5.8"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
