[tool.poetry]
name = "tradingapi"
version = "0.8.5"
description = ""
authors = ["August Andersen", "Julius Kittler"]

[tool.poetry.dependencies]
python = "3.8.x"
pandas = "^1.0.0"
numpy = "^1.0.0"
scipy = "^1.0.0"
pymongo = "^3.0.0"
requests = "^2.0.0"
pytz = "^2021.1"
alpaca-trade-api = "v0.51.0"
ib_insync = "0.9.64"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
flake8 = "*"
pep8-naming = "*"
mypy = "*"
pydocstyle = "*"
darglint = "*"
jupyter = "*"
jupyterlab = "^3.2.4"
jupyterlab-horizon-theme = "^3.0.1"
aiounittest = "^1.4.1"
testfixtures = "^6.18.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
